--- a/src/frontendMain/resources/app.css
+++ b/src/frontendMain/resources/app.css
@@ -130,3 +130,11 @@
 .btn {
     margin-left: 0.25em;
 }
+
+.form-label {
+    font-size: small;
+}
+
+.form-group .form-control {
+    font-size: 2rem;
+}
